--- a/learning-git/index.html
+++ b/learning-git/index.html
@@ -3,8 +3,13 @@
 <head>
 <title> Page Title </title>
 </head>
-<body>   
+<body>
+  
+  <h1> This is a heading </h1>
   <p> First paragraph </p>
+  <p> This is a paragraph </p>
+  <p> This is another paragraph </p>
 
 </body>
 </html>
+
